exports[`actions > organization create organization should work 1`] = `
Object {
  "payload": Object {
    "groups": Array [],
    "name": "mockOrg",
    "sites": Array [],
  },
  "type": "add organization",
}
`;

exports[`actions > organization create organization should work 2`] = `
Object {
  "payload": Object {
    "args": Array [
      "/",
    ],
    "method": "push",
  },
  "type": "@@router/CALL_HISTORY_METHOD",
}
`;

exports[`actions > organization create site should work 1`] = `
Object {
  "payload": Object {
    "name": "mockSite",
    "organizationId": "1",
  },
  "type": "add site",
}
`;

exports[`actions > organization create site should work 2`] = `
Object {
  "payload": Object {
    "args": Array [
      "/organizations/1",
    ],
    "method": "push",
  },
  "type": "@@router/CALL_HISTORY_METHOD",
}
`;
